# LIL_GNIDA

./: .env_example  .gitignore  BOT_STARTER.BAT  README.md  pyproject.toml  requirements.txt
data/: LLM_CHAT_INPUT_DATA.json  LLM_RESPONSE_FOR_TTS.txt  LLM_SINGLE_INPUT_DATA.json
src/lil_gnida/: commands.py  config.py  handlers.py  keyboards.py  main.py  ollama_interaction.py
